<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_last_update" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_release_date" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_credits1" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_creator" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingTop="5dp"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tvEmailAddress"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/email_address" />

        <TextView
            android:id="@+id/tvWebAddress"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="20dp"
            android:text="@string/web_address" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/app_credits2" />

        <Button
            android:id="@+id/btRateApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="rateTheApp"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingRight="8dp"
            android:paddingBottom="3dp"
            android:text="@string/mnu_rate"
            android:textSize="@dimen/text_size_main" />
    </LinearLayout>

</ScrollView>