<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbtSoundsSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_sounds" />

        <CheckBox
            android:id="@+id/cbtMusicSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_music" />

        <CheckBox
            android:id="@+id/cbtScreenAwakeSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_screen_awake" />

        <!-- Reset the game to its defaults: -->

        <Button
            android:id="@+id/btResetDefaults"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetToDefaults"
            android:text="@string/bt_reset_to_defaults" />
    </LinearLayout>

</ScrollView>