<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llConfirmLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvConfirmQuestion"
        style="@style/bottom_info_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:text="@string/are_you_sure" />

    <Button
        android:id="@+id/btNo"
        style="@style/bottom_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:focusable="true"
        android:onClick="noPressedForFinalAnswer"
        android:text="@string/no" />

    <Button
        android:id="@+id/btYes"
        style="@style/bottom_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:focusable="true"
        android:onClick="yesPressedForFinalAnswer"
        android:text="@string/yes">

        <requestFocus />
    </Button>

</LinearLayout>