<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/svMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:id="@+id/llMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/tvMenuItem1"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:nextFocusUp="@+id/tvMenuItem6"
                android:onClick="startQuiz"
                android:text="@string/bt_start_quiz" />

            <TextView
                android:id="@+id/tvMenuItem2"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:onClick="goToSetsManagement"
                android:text="@string/bt_game_mode" />

            <TextView
                android:id="@+id/tvMenuItem3"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:onClick="goToStatistics"
                android:text="@string/bt_statistics" />

            <TextView
                android:id="@+id/tvMenuItem4"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:onClick="settings"
                android:text="@string/bt_settings" />

            <TextView
                android:id="@+id/tvMenuItem5"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:onClick="showHelp"
                android:text="@string/bt_help" />

            <TextView
                android:id="@+id/tvMenuItem6"
                style="@style/mainMenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_below_menu_item"
                android:nextFocusDown="@+id/tvMenuItem1"
                android:onClick="showAbout"
                android:text="@string/bt_about" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>